# swc-plugin-transform-async-to-ng-generator

./: .gitignore  Cargo.toml  README.md  package.json  rust-toolchain.toml
.cargo/: config.toml
src/: ast_builders.rs  config.rs  lib.rs  visitor.rs
src/transforms/: fn_decl.rs  fn_expr.rs  helpers.rs  method.rs  mod.rs
tests/: fixture.rs
tests/fixture/async-arrow-function/: input.js  output.js
tests/fixture/async-arrow-in-method/: input.js  output.js
tests/fixture/async-class-method/: input.js  output.js
tests/fixture/async-fn-declaration/: input.js  output.js
tests/fixture/async-fn-no-await/: input.js  output.js
tests/fixture/async-object-method/: input.js  output.js
tests/fixture/default-arguments/: input.js  output.js
tests/fixture/destructuring-params/: input.js  output.js
tests/fixture/double-await/: input.js  output.js
tests/fixture/method-with-arrow-callback/: input.js  output.js
tests/fixture/method-with-params/: input.js  output.js
tests/fixture/multiple-async-same-scope/: input.js  output.js
tests/fixture/named-expression/: input.js  output.js
tests/fixture/nested-async-functions/: input.js  output.js
tests/fixture/this-capture/: input.js  output.js
