[package]
name = "swc-plugin-transform-async-to-ng-generator"
version = "0.2.1"
edition = "2021"
description = "SWC plugin to transform async functions to ng-generator functions for AngularJS $q compatibility"
license = "MIT"
authors = ["Alvin Huang"]

[lib]
crate-type = ["cdylib"]

[dependencies]
swc_core = { version = "54.0.0", features = [
    "ecma_plugin_transform",
] }
serde = { version = "1", features = ["derive"] }

[profile.release]
lto = "thin"
opt-level = "z"
codegen-units = 1

[profile.dev]
opt-level = 0
